# openpinch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  Makefile  README.md  buf.gen.yaml  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  connector-request.yml  docs-improvement.yml  feature-request.yml
.github/workflows/: ci-flutter.yml  ci-go.yml  ci-rust.yml  release.yml  sync-labels.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/crates/common/: Cargo.toml  build.rs
core/crates/common/src/: config.rs  crypto.rs  lib.rs  paths.rs  policy.rs  proto.rs  skill.rs  types.rs
core/crates/engine/: Cargo.toml
core/crates/engine/src/: lib.rs
core/crates/engine/src/providers/: llamacpp.rs  mod.rs  ollama.rs  openai_compat.rs
core/crates/sandbox/: Cargo.toml
core/crates/sandbox/src/: lib.rs
core/crates/sandbox/src/backends/: linux.rs  macos.rs  windows.rs
core/crates/tools/: Cargo.toml
core/crates/tools/src/: lib.rs
core/src/: main.rs
deploy/operator/: README.md  go.mod  main.go
deploy/operator/config/crd/: openpinchagent.yaml
docs/: architecture.md  branching-and-ci.md  migration-from-openclaw.md  ownership.md  sandbox.md  setup.md  skills.md
docs/formal/: handoff_v1.tla  handoff_v1.validator.json
gateway/: go.mod  go.sum
gateway/cmd/gateway/: main.go
gateway/internal/config/: config.go
gateway/internal/connectors/: connectors.go  connectors_test.go  telegram.go  webchat.go
gateway/internal/enginebridge/: bridge.go
gateway/internal/scheduler/: scheduler.go
gateway/internal/server/: events.go  server.go  web.go
gateway/pkg/pb/: schema.go
proto/: openpinch.proto
sandbox-runtime/src/: lib.rs
scripts/: build.sh  migrate-openclaw.sh  setup.sh
skills/: registry.json
skills/examples/: echo.skill
skills/examples/echo/: manifest.json  manifest.sig.json  run.sh
skills/policies/: default.yaml
skills/registry/: index.json  index.sig.json
skills/templates/: basic_skill.rs
skills/trust/: root.json
ui/: README.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/openpinch_ui/: MainActivity.kt
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
