[package]
name = "openpinch-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entrypoint for the OpenPinch local runtime"

[[bin]]
name = "openpinch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
openpinch-common = { path = "../core/crates/common" }
openpinch-engine = { path = "../core/crates/engine" }
openpinch-tools = { path = "../core/crates/tools" }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
