[workspace]
members = ["crates/common", "crates/engine", "crates/sandbox", "crates/tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/PeshalaDilshan/openpinch"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
anyhow = "1.0"