[package]
name = "openpinch-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
directories.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
zstd.workspace = true

[build-dependencies]
protoc-bin-vendored = "3.1"
tonic-build = "0.12"
