# core/crates/engine/Cargo.toml
[package]
name = "openpinch-engine"
version.workspace = true
edition.workspace = true

[dependencies]
openpinch-common = { path = "../common" }
openpinch-sandbox = { path = "../sandbox" }
openpinch-tools = { path = "../tools" }
tokio.workspace = true
tracing.workspace = true