# core/crates/sandbox/Cargo.toml
[package]
name = "openpinch-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
openpinch-common = { path = "../common" }
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true