[package]
name = "openpinch-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
openpinch-common = { path = "../common" }
openpinch-sandbox = { path = "../sandbox" }
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true

